--- a/client/package.json
+++ b/client/package.json
@@ -19,13 +19,12 @@
     "eslint-plugin-react": "^3.14.0",
     "history": "^1.17.0",
     "react": "^0.14.6",
-    "react-bootstrap-modal": "^2.0.0",
-    "react-dom": "^0.14.6",
-    "react-router": "^1.0.3",
+	"react-dom": "^0.14.6",
+  "react-router": "^2.0.0",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "react-router": "^2.0.0"
+    "react-bootstrap": "^0.30.6"
   }
 }
