--- a/client/package.json
+++ b/client/package.json
@@ -19,13 +19,14 @@
     "eslint-plugin-react": "^3.14.0",
     "history": "^1.17.0",
     "react": "^0.14.6",
-	  "react-dom": "^0.14.6",
+    "react-dom": "^0.14.6",
     "react-router": "^2.0.0",
     "react-modal": "^1.6.2",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "bootstrap-select": "^1.12.1",
     "react-bootstrap": "^0.30.6"
   }
 }
