--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,15 @@
   "description": "server-side",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.15.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "mysql": "^2.12.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "body-parser": "^1.15.0",
-    "cookie-parser": "^1.4.3"
+    "permission": "^1.0.4"
   },
   "devDependencies": {
     "eslint": "^2.4.0",
