--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "bootstrap-select": "^1.12.1"
+    "bootstrap-select": "^1.12.1",
+    "react-select": "^1.0.0-rc.2"
   }
 }
