add a calendar to the view log page

--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "bootstrap-select": "^1.12.1",
+    "rc-calendar": "^7.5.2",
     "react-select": "^1.0.0-rc.2"
   }
 }
